Fix header spacing

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  gap: 0px;
 }
 
 .profile-image {
@@ -27,6 +31,18 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+}
+
+.header-right {
+  display: flex;
+  margin-left: auto;
+  gap: 16px;
+}
+
+.header-left {
+  display: flex;
+  
+  
 }
 
 button {
@@ -45,4 +61,6 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
 }
